# herencia-polimorfismo-salarios

./: .gitignore  CMakeLists.txt  UML.md  main.cpp
include/: DesarrolladorJunior.cpp  DesarrolladorJunior.h  DesarrolladorSenior.cpp  DesarrolladorSenior.h  Empleado.cpp  Empleado.h  LiderTecnico.cpp  LiderTecnico.h  tester.cpp  tester.h
